[gd_scene load_steps=5 format=3 uid="uid://ycrv083kmlcw"]

[ext_resource type="Texture2D" uid="uid://diyl4yku8xv0r" path="res://Sprites/Weapons/GoldfishTrident.png" id="1_xuqo8"]
[ext_resource type="Script" path="res://Scripts/Weapons/Goldfish_Trident.gd" id="2_q0hx5"]
[ext_resource type="Script" path="res://Scripts/Useful/Friendly_Projectile.gd" id="3_uigo6"]
[ext_resource type="AudioStream" uid="uid://br61mrhe0ixlj" path="res://Sounds/Throw.mp3" id="4_ihkaw"]

[node name="Goldfish_Trident" type="Sprite2D"]
texture = ExtResource("1_xuqo8")
script = ExtResource("2_q0hx5")
shoot_cooldown = 3.0
original_energy_use = 95.0
energy_recover_cooldown = 3.0

[node name="Goldfish_Trident_Damage" type="Area2D" parent="."]
monitoring = false
script = ExtResource("3_uigo6")
original_damage = 2.0
despawn_time = 0.0
has_movement = false
persistent = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Goldfish_Trident_Damage"]
polygon = PackedVector2Array(0, -9, -11, 2, -2, 11, 9, 0)

[node name="Use_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ihkaw")
volume_db = 4.0
pitch_scale = 0.6
bus = &"Sounds"

[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="body_entered" from="Goldfish_Trident_Damage" to="." method="_on_goldfish_trident_damage_body_entered"]
